# antariskh

./: .coverage  .gitignore  AGENTS_SPECIFICATION.md  ARCHITECTURE.md  ASSET_MANAGER_GUIDE.md  AUDIT_DATA_POPULATION.md  BRAHMAND_MVP_SPEC.md  BROKER_API_SAFETY.md  BUILD_LOG.md  CHARTER.md  CLAUDE.md  CLAUDE_MASTER_HANDOFF.md  COMPLETION_CHECKLIST.md  CONTEXT.md  CREWAI_HANDOFF_TESTING.md  CREWAI_VS_LANGGRAPH_DEEPSEEK.md  CREW_SPEC.md  CRITICAL_FIXES_REQUIRED.md  DATA_CAPTURE.md  DATA_CAPTURE_V4.md  DATA_CAPTURE_VALIDATION_REPORT.md  DEEPSEEK_EXECUTION_PLAN.md  DEEPSEEK_HANDOFF.md  DEEPSEEK_REPORT.md  DEEPSEEK_STATUS_LOG.md  DEEPSEEK_TESTING_HANDOFF.md  EMA_WIRING_VERIFICATION.md  EXEC_REPORTING_FRAMEWORK.md  GAPS_AND_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  ISSUES_AND_FIXES.md  ISSUE_UPDATE_DeepSeek.md  LEG_SHIFTER_CODE_REFERENCE.md  MARGIN_FETCH_INTEGRATION.md  MORPHING_POSITION_MANAGER.md  ORDER_AGENT_INTEGRATION.md  PHASE1_README.md  PHASE_1_DEPLOYMENT_SPEC.md  PICOCLAW_INSTRUCTIONS.md  QUICKSTART.md  (+57 more)
.claude/: settings.json
.deepseek/: instructions.md
.paul/: PROJECT.md  ROADMAP.md  STATE.md  config.md
.planning/: DATA_CAPTURE_V4_READY.md  GAP_HANDLING_STRATEGY.md  MULTITF_AGGREGATION.md  MULTITF_MINUTE_BY_MINUTE.md  PA_RESEARCHER_CAPABILITY_AUDIT.md  PA_RESEARCHER_COMPLETE.md  PA_ROADMAP.md  PHASE_DETECTION_OHLC_SEQUENCE.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  UNIFIED_REGIME_DETECTION.md  VISUAL_AGGREGATION_FLOW.md  config.json
brahmand/: __init__.py  state.py
config/: agents.json  antariksh_rules.yaml  db_paths.py  entry_weights.json  event_calendar.json  self_improve.yaml
consumers/: instrument_consumer.py
crews/: am_crew.py  ceo_crew.py  cto_crew.py  dev_crew.py  om_crew.py  pa_crew.py  pm_crew.py  qa_crew.py  ta_crew.py  telegram_reporter.py
cron/: check_data_capture_status.sh  check_market_open.sh  run_entry_check.sh  (+4 more)
(+127 files in other folders)
